--- a/KouTrashCollector/KouTrashCollector/Views/Customers/Index.cshtml
+++ b/KouTrashCollector/KouTrashCollector/Views/Customers/Index.cshtml
@@ -8,10 +8,11 @@
 
 
 
-@if (Request.IsAuthenticated && User.IsInRole("CanManageForm"))
-{
-    @Html.ActionLink("Add Customer", "New", null, new { @class = "btn btn-primary" })
+@*@if (Request.IsAuthenticated && User.IsInRole("CanManageForm"))
+{*@
+    
     <h3>Customer Information</h3>
+    @Html.ActionLink("Add Customer", "New", null, new { @class = "btn btn-primary" })
     <table class="table table-condensed table-hover">
         <thead>
             <tr>
@@ -31,9 +32,7 @@
             @foreach (var customer in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(customer.LastName, "Edit", "Customers", new
-                   {
-                       id = customer.Id, @*addressID = customer.Address.Id*@ }, null) </td>
+                    <td>@Html.ActionLink(customer.LastName, "Edit", "Customers", new {id = customer.Id }, null) </td>
                     <td>@Html.ActionLink(customer.FirstName, "Details", "Customers", new { id = customer.Id }, null) </td>
                     <td>@customer.Email</td>
                     <td>@customer.StreetOne</td>
@@ -46,48 +45,4 @@
             }
         </tbody>
     </table>
-}
-
-else
-{
-
-    <h3>Customer Information</h3>
-    <table class="table table-condensed table-hover">
-        <thead>
-            <tr>
-                <th>Last Name (Edit)</th>
-                <th>First Name (Details)</th>
-                <th>E-Mail Address</th>
-                <th>Street One</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Zipcode</th>
-                <th>Membership Type</th>
-                <th>Pick up Day</th>
-
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var customer in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.ActionLink(customer.LastName, "Edit", "Customers", new
-                   {
-                       id = customer.Id, @*addressID = customer.Address.Id*@ }, null)
-                </td>
-                <td>@Html.ActionLink(customer.FirstName, "Details", "Customers", new { id = customer.Id }, null) </td>
-                <td>@customer.Email</td>
-                <td>@customer.StreetOne</td>
-                <td>@customer.City.CityName</td>
-                <td>@customer.State.StateName</td>
-                <td>@customer.Zipcode.ZipcodeNum</td>
-                <td>@customer.MembershipType.MembershipName</td>
-                <td>@customer.PickUpDay.DayOfWeek</td>
-            </tr>
-            }
-        </tbody>
-    </table>
-}
-
 
