--- a/KouTrashCollector/KouTrashCollector/Views/Home/About.cshtml
+++ b/KouTrashCollector/KouTrashCollector/Views/Home/About.cshtml
@@ -1,9 +1,6 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
+﻿<h1 style="color:green"><b>About Us<b/></h1>
 
-The Milwaukee Department of Public Works has the greatest impact of any city department on daily life in Milwaukee.
+KC Trash Services has the greatest impact of any city department on daily life in Milwaukee.
 
 <p>
     We contribute to the quality of life and economic development of Milwaukee in many ways. We provide the cleanest,
