--- a/KouTrashCollector/KouTrashCollector/Content/Site.css
+++ b/KouTrashCollector/KouTrashCollector/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.jumbotron {
+    background-image:url(gogreen.jpg);
+    padding-bottom:320px;
+    
+}
+a {
+    color:white;
+}
