--- a/KouTrashCollector/KouTrashCollector/Views/Customers/Delete.cshtml
+++ b/KouTrashCollector/KouTrashCollector/Views/Customers/Delete.cshtml
@@ -8,7 +8,7 @@
 
     <h2>Delete Customer</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Are you sure you want to delete this customer?</h3>
     <div>
     
         <hr />
@@ -30,20 +30,14 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Zipcode)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Zipcode)
-            </dd>
-
-            <dt>
                 @Html.DisplayNameFor(model => model.Email)
             </dt>
 
             <dd>
                 @Html.DisplayFor(model => model.Email)
             </dd>
+
+
 
         </dl>
 
