--- a/KouTrashCollector/KouTrashCollector/Views/Shared/_Layout.cshtml
+++ b/KouTrashCollector/KouTrashCollector/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title -City of Milwaukee DPW</title>
+    <title>@ViewBag.Title -KC Trash Services</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -17,15 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("City of Milwaukee DPW", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("KC Trash Services", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Membership", "Membership", "Customers")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Worker List", "Index", "Worker")</li>
-                    <li>@Html.ActionLink("Customer List", "Index", "Customers")</li>
 
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -36,7 +34,9 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Frank and Kou</p>
+            <center>
+            <p>&copy; @DateTime.Now.Year - KC Trash Services</p>
+                </center>
         </footer>
     </div>
 
