--- a/KouTrashCollector/KouTrashCollector/Views/Customers/Membership.cshtml
+++ b/KouTrashCollector/KouTrashCollector/Views/Customers/Membership.cshtml
@@ -20,9 +20,9 @@
         <h3 style="color:green"> <b>Service Fees</b></h3>
         <table style="width:50%" height="50" border="1">
             <tr>
-            <td align="center"><b>One A Week</b></td>
-            <td align="center"><b>Twice a Week</b></td>
-            <td align="center"><b>Once a Month</b></td>
+            <td align="center"><b>Once A Week</b></td>
+            <td align="center"><b>Twice A Week</b></td>
+            <td align="center"><b>Once A Month</b></td>
             <td align="center"><b>Twice A Month</b></td></tr>
             <tr>
             <td align="center">$25.00</td>
