--- a/KouTrashCollector/KouTrashCollector/Views/Home/Contact.cshtml
+++ b/KouTrashCollector/KouTrashCollector/Views/Home/Contact.cshtml
@@ -14,5 +14,5 @@
 
     <address>
         <strong>Support:</strong>   <a href="mailto:FrankFranken1985@gmail.com">FrankFranken1985@gmail.com</a><br />
-        <strong>Marketing:</strong> <a href="mailto:KoudKou@gmail.com">KoudKou@gmail.com</a>
+        <strong>Marketing:</strong> <a href="http://mail.google.com/mail/?view=cm&fs=1&tf=1&to=&su=">KoudKou@gmail.com</a>
     </address>
